# mas_mp01_s22666

./: Cargo.toml  soldiers.json
src/: main.rs  rank.rs  soldier.rs  soldier_extent.rs  squad.rs
