[package]
name = "mas_mp01_s22666"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Container with persistent unique keys to access stored values
slotmap = {version = "1.0.6", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
regex = "1.7.3"